# Ixodes

./: Cargo.toml  GEMINI.md  LICENSE  README.md  build.rs
ixodes/: .gitignore  AGENTS.md  Cargo.toml  GEMINI.md  build.rs  recovery-inventory.txt
ixodes-gui/: package.json  svelte.config.js
ixodes-gui/src/: app.css  app.html
ixodes-gui/src-tauri/: Cargo.toml  tauri.conf.json
ixodes-gui/src-tauri/icons/: icon.icns
ixodes-gui/src-tauri/presets/: README.md
ixodes-gui/src-tauri/src/: lib.rs  main.rs
ixodes-gui/src/lib/: branding-presets.ts
ixodes-gui/src/lib/components/ui/accordion/: accordion-trigger.svelte
ixodes-gui/src/lib/components/ui/command/: command-item.svelte
ixodes-gui/src/lib/components/ui/field/: field-error.svelte
ixodes-gui/src/lib/components/ui/select/: select-item.svelte  select-trigger.svelte
ixodes-gui/src/lib/data/: countries.ts
ixodes-gui/src/lib/validation/: communication.ts
ixodes-gui/src/routes/: +layout.svelte  +page.svelte
ixodes-gui/src/routes/components/: ClipperSection.svelte  CommunicationSection.svelte  FeatureSection.svelte  FileGrabberSection.svelte  GeoBlockSection.svelte  LoaderSection.svelte  NetworkSection.svelte  PasswordGeneratorDialog.svelte  PumperSection.svelte  feature-data.ts
ixodes/persistence_dll/: Cargo.toml
ixodes/persistence_dll/src/: lib.rs
ixodes/src/: build_config.rs  formatter.rs  main.rs  sender.rs
ixodes/src/assets/: secret.blob
ixodes/src/recovery/: account_validation.rs  behavioral.rs  clipboard.rs  clipper.rs  config.rs  context.rs  defaults.rs  devops.rs  evasion.rs  gaming.rs  geoblock.rs  hardware.rs  hollowing.rs  killswitch.rs  loader.rs  manager.rs  mod.rs  other.rs  persistence.rs  pumper.rs  screenshot.rs  self_delete.rs  settings.rs  settings.rs.bak  system.rs  task.rs  uac.rs  wallet.rs  webcam.rs
ixodes/src/recovery/browser/: browsers.rs  chromium.rs  gecko.rs  gecko_passwords.rs  lockedfile.rs  mod.rs
ixodes/src/recovery/communication/: discord.rs  email.rs  messenger.rs  mod.rs
ixodes/src/recovery/helpers/: anti_vm.rs  hardware.rs  hw_breakpoints.rs  mod.rs  network.rs  obfuscation.rs  payload.rs  pe.rs  sleep.rs  syscalls.rs  unhooking.rs  winhttp.rs
ixodes/src/recovery/network/: ftp.rs  mod.rs  proxy.rs  rdp.rs  services.rs  vnc.rs  vpn.rs  wifi.rs
ixodes/src/recovery/storage/: file_recovery.rs  fs.rs  mod.rs  output.rs  structured.rs
ixodes/src/recovery/surveillance/: keylogger.rs
src/: main.rs  secure_blob.rs
src/recovery/: account_validation.rs  behavioral.rs  gaming.rs  hardware.rs  manager.rs  mod.rs  registry.rs  system.rs  task.rs
src/recovery/browser/: browsers.rs  chromium.rs  gecko.rs  gecko_passwords.rs  mod.rs
src/recovery/communication/: jabber.rs
src/recovery/helpers/: hardware.rs
src/recovery/network/: ftp.rs  vpn.rs
src/recovery/storage/: fs.rs  output.rs  structured.rs
