[package]
name = "ixodes"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
thiserror = "1.0"
tokio = { version = "1.45", features = ["rt-multi-thread", "macros", "fs", "io-util", "sync", "process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
directories = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm = "0.10"
base64 = "0.21"
libloading = "0.7"
regex = "1.11"
winreg = "0.12"
windows = { version = "0.48", features = ["Win32_Security_Cryptography", "Win32_System_Memory", "Win32_Foundation", "Win32_System_LibraryLoader"] }
walkdir = "2.3.3"
quick-xml = "0.27"
roxmltree = "0.18"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rusqlite = { version = "0.33", features = ["bundled"] }
aes = "0.8.4"
cfb8 = "0.8"
hex = "0.4.3"
once_cell = "1.21"
rand = "0.8"
zeroize = "1"
const-random = "0.1"
[build-dependencies]
rand = { version = "0.8", features = ["std"] }
