[package]
name = "ixodes-gui"
version = "0.1.0"
description = "Ixodes Builder"
authors = ["xeintdm"]
edition = "2024"

[lib]
name = "ixodes_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
image = { version = "0.25", default-features = false, features = ["png", "ico", "jpeg"] }
ico = "0.3"
